# CS50x

./: .gitignore  CMakeLists.txt
src/pset1/cash/: cash.c
src/pset1/hello/: hello.c
src/pset1/mario/: mario.c
src/pset2/caesar/: caesar.c
src/pset2/readability/: readability.c
src/pset2/scrabble/: scrabble.c
src/pset3/plurality/: plurality.c
src/pset3/runoff/: runoff.c
src/pset3/sort/: answers.txt
src/pset4/filter/: filter.c  helpers.c
src/pset4/recover/: recover.c
src/pset4/volume/: volume.c
src/pset5/inheritance/: inheritance.c
src/pset5/speller/: dictionary.c
src/pset6/dna/: dna.py
src/pset6/dna/databases/: large.csv  small.csv
src/pset6/sentimental-cash/: cash.py
src/pset6/sentimental-hello/: hello.py
src/pset6/sentimental-mario-less/: mario.py
src/pset6/sentimental-readability/: readability.py
src/pset6/world-cup/: 2018m.csv  2019w.csv  tournament.py
src/pset7/fiftyville/: log.sql
src/pset7/movies/: 1.sql  10.sql  11.sql  12.sql  13.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
src/pset7/songs/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql
src/pset8/homepage/: aguarde.html  index.html  verVeiculo.html
src/pset8/homepage/js/: valida.js
src/pset8/trivia/: index.html
src/pset9/birthdays/: app.py  birthdays.db
src/pset9/birthdays/templates/: index.jinja2
src/pset9/finance/: app.py  finance.db  helpers.py
src/pset9/finance/templates/: apology.jinja2  layout.jinja2
src/pset9/finance/templates/login/: login.jinja2  register.jinja2
src/pset9/finance/templates/portifolio/: history.jinja2  (+1 more)
(+4 files in other folders)
